tests/baselines/reference/bundlerOptionsCompat.errors.txt
/tsconfig.json(4,25): error TS5095: Option 'bundler' can only be used when 'module' is set to 'preserve' or to 'es2015' or later.


==== /tsconfig.json (1 errors) ====
    {
      "compilerOptions": {
        "module": "commonjs",
        "moduleResolution": "bundler",
                            ~~~~~~~~~
!!! error TS5095: Option 'bundler' can only be used when 'module' is set to 'preserve' or to 'es2015' or later.
        "noEmit": true
      }
    }
    
==== /index.ts (0 errors) ====
    